@@ -106,6 +106,7 @@ check_function_exists(getpid HAVE_GETPID)
 check_function_exists(gettimeofday HAVE_GETTIMEOFDAY)
 check_function_exists(localtime_r HAVE_DECL_LOCALTIME_R)
 check_function_exists(malloc HAVE_MALLOC)
+check_function_exists(mkstemp HAVE_MKSTEMP)
 check_function_exists(realloc HAVE_REALLOC)
 check_function_exists(setenv HAVE_DECL_SETENV)
 check_function_exists(sigaction HAVE_SIGACTION)
